RESOLVED FIXED233696
[:has() pseudo-class] Sibling combinator invalidation
https://bugs.webkit.org/show_bug.cgi?id=233696
Summary [:has() pseudo-class] Sibling combinator invalidation
Antti Koivisto
Reported 2021-12-01 04:49:40 PST
Invalidate style correctly for sibling combinators in :has() arguments.
Attachments
Patch (18.48 KB, patch)
2021-12-01 04:59 PST, Antti Koivisto
no flags
Patch (18.59 KB, patch)
2021-12-01 06:05 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2021-12-01 04:59:32 PST
Antti Koivisto
Comment 2 2021-12-01 04:59:56 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/31807
EWS Watchlist
Comment 3 2021-12-01 05:01:17 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Antti Koivisto
Comment 4 2021-12-01 06:05:21 PST
EWS
Comment 5 2021-12-01 09:04:36 PST
Committed r286365 (244724@main): <https://commits.webkit.org/244724@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 445568 [details].
Radar WebKit Bug Importer
Comment 6 2021-12-01 09:05:24 PST
Note You need to log in before you can comment on or make changes to this bug.