[:has() pseudo-class] Sibling combinator invalidation https://bugs.webkit.org/show_bug.cgi?id=233696

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/selectors/invalidation/has-sibling-expected.txt: Added.
* web-platform-tests/css/selectors/invalidation/has-sibling.html: Added.

Source/WebCore:

Invalidate style correctly for sibling combinators in :has() arguments.

Also add new MatchElement::HasSiblingDescendant value used for :has() arguments that
match the subject elements siblings descendants, like ':has(~ div .descendant)'.
Use it to avoid unnecessary big tree traversals in simple cases.

Test: imported/w3c/web-platform-tests/css/selectors/invalidation/has-sibling.html

* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::matchHasPseudoClass const):

Minimal traversals for HasSibling and HasSiblingDescendant.

* style/ChildChangeInvalidation.cpp:
(WebCore::Style::needsTraversal):
(WebCore::Style::needsDescendantTraversal):
* style/RuleFeature.cpp:
(WebCore::Style::isSiblingOrSubject):
(WebCore::Style::isHasPseudoClassMatchElement):
(WebCore::Style::computeHasPseudoClassMatchElement):
* style/RuleFeature.h:
* style/StyleInvalidator.cpp:
(WebCore::Style::Invalidator::invalidateStyleWithMatchElement):

Invalidation traversal.



Canonical link: https://commits.webkit.org/244724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286365 268f45cc-cd09-0410-ab3c-d52691b4dbfc